# motion_capture

./: .gitignore  CMakeLists.txt  package.xml
launch/: camera.rviz  camera_environment.launch  camera_environment2.launch  camera_environment3.launch  camera_environment4.launch  camera_rviz.launch  cameras.launch  octomap.launch
models/depth_camera/: model.config
models/environment/: model.config
models/gripper/: model.config
models/kinect/: model.config
models/rover/: model.config
models/rover_manipulator/: model.config
rviz/: camera.rviz
scripts/: cam_pub.py  cam_sub.py  camera_1.py  camera_2.py  camera_3.py  camera_4.py  camera_5.py  cameras.py  cameras.sh  edge_detection.py  h_cam.py  homography.py
sdf/: depth_camera.sdf  environment.sdf  gripper.sdf  kinect.sdf  rover.sdf  rover_manipulator.sdf
worlds/: camera_environment.world  camera_environment2.world  camera_environment3.world  camera_environment4.world
