<?xml version="1.0"?>
<package format="3">
  <name>motion_capture</name>
  <version>0.1.0</version>
  <description>The motion_capture package</description>

  <maintainer email="rob@todo.todo">rob</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>gazebo_ros</depend>

  <build_depend>octomap</build_depend>
  <exec_depend>octomap</exec_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models" />
    <gazebo_ros gazebo_media_path="${prefix}/worlds" />
  </export>

</package>